# Cloth-Shop

./: CustomerProcess.c  CustomerProcess.h  InventoryManagerProcess.c  InventoryManagerProcess.h  README.md  SharedData.c  SharedData.h  ShopProcess.c  ShopProcess.h  database.txt  main.c
Qt_GUI/: CMakeLists.txt  CartManager.h  DatabaseLoader.h  Items.qml  Main.qml  OrderManager.h  STM_images.qrc  SearchBar.qml  SearchManager.h  ShowAllCartItems.qml  ShowAllOrders.qml  ShowRestock.qml  TopBanner.qml  database.txt  main.cpp  test.qml
Qt_GUI/IPC_part/: InventoryManagerProcess.cpp  SharedData.h  ShopProcess.cpp  ShopProcess.h
